# daily_court_scraper

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.dbt/: .user.yml  profiles.yml
.dlt/: config.toml
.github/workflows/: lint-and-format.yml  update-court-data.yml
court_data/extract_daily_courts_dataset/_dlt_loads/: extract_daily_courts__1732559660.6408792.jsonl  extract_daily_courts__1732737998.4647257.jsonl  extract_daily_courts__1732860432.1489184.jsonl  extract_daily_courts__1732946756.8462017.jsonl  extract_daily_courts__1733033184.912808.jsonl  extract_daily_courts__1733119637.2388031.jsonl  extract_daily_courts__1733206021.6214752.jsonl  extract_daily_courts__1733292424.5201588.jsonl  extract_daily_courts__1733378850.303735.jsonl  extract_daily_courts__1733465209.280302.jsonl  extract_daily_courts__1733551581.6542895.jsonl  extract_daily_courts__1733637985.8660989.jsonl  extract_daily_courts__1733724450.5931597.jsonl  extract_daily_courts__1733810828.2824655.jsonl  extract_daily_courts__1733897219.839596.jsonl  extract_daily_courts__1733983643.4871745.jsonl  extract_daily_courts__1734070011.1642795.jsonl  extract_daily_courts__1734156373.9447403.jsonl  extract_daily_courts__1734242780.2414308.jsonl  extract_daily_courts__1734329254.7053883.jsonl  extract_daily_courts__1734415609.493551.jsonl  extract_daily_courts__1734502019.3703012.jsonl  extract_daily_courts__1734588408.2043672.jsonl  extract_daily_courts__1734674789.2933414.jsonl  extract_daily_courts__1734761151.0139217.jsonl  extract_daily_courts__1734847552.6587026.jsonl  extract_daily_courts__1734934008.412929.jsonl  extract_daily_courts__1735020398.5786262.jsonl  extract_daily_courts__1735106795.1986678.jsonl  extract_daily_courts__1735193194.7069197.jsonl  extract_daily_courts__1735279593.1915722.jsonl  extract_daily_courts__1735365947.2390728.jsonl  extract_daily_courts__1735452356.283622.jsonl  extract_daily_courts__1735538808.2760956.jsonl  extract_daily_courts__1735625190.752482.jsonl  extract_daily_courts__1735711601.3279448.jsonl  extract_daily_courts__1735797990.5214243.jsonl  extract_daily_courts__1735884392.4224257.jsonl  (+150 more)
court_scraper_dbt/: .user.yml  dbt_project.yml
schemas/export/: extract_daily_courts.schema.yaml
schemas/import/: extract_daily_courts.schema.yaml
src/: __init__.py  _exceptions.py  custom_snake_case.py  dlt_resources.py  logger.py  pipeline_logging.py
src/scrapers/: __init__.py  court_data.py  scraper.py  validation.py
tests/: conftest.py  helpers.py  test_court_data_parsing.py  test_html_scrape.py
tests/test_data/: aylesbury.htm  barnstaple.htm  hove.htm
(+194 files in other folders)
